// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > should render with custom class names 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-3 items-center py-5 px-6 w-full rounded-xl border dark:bg-transparent border-theme-warning-200 bg-theme-warning-50 custom-class dark:border-theme-warning-600"
    data-testid="Loader__wrapper"
  >
    <div
      class="w-5 h-5 rounded-full animate-spin border-[5px] shrink-0 border-theme-warning-200 border-l-theme-warning-900 dark:border-theme-secondary-800 dark:border-l-theme-warning-600"
    />
    <hr
      class="w-px h-5 border-transparent bg-theme-warning-200 dark:bg-theme-secondary-800"
    />
    <span
      class="text-sm font-semibold md:text-base text-theme-secondary-700 dark:text-theme-warning-600"
      data-testid="Loader__text"
    >
      Testing
    </span>
  </div>
</DocumentFragment>
`;

exports[`Loader > should render with custom text 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-3 items-center py-5 px-6 w-full rounded-xl border dark:bg-transparent border-theme-warning-200 bg-theme-warning-50 dark:border-theme-warning-600"
    data-testid="Loader__wrapper"
  >
    <div
      class="w-5 h-5 rounded-full animate-spin border-[5px] shrink-0 border-theme-warning-200 border-l-theme-warning-900 dark:border-theme-secondary-800 dark:border-l-theme-warning-600"
    />
    <hr
      class="w-px h-5 border-transparent bg-theme-warning-200 dark:bg-theme-secondary-800"
    />
    <span
      class="text-sm font-semibold md:text-base text-theme-secondary-700 dark:text-theme-warning-600"
      data-testid="Loader__text"
    >
      Testing
    </span>
  </div>
</DocumentFragment>
`;
